@startuml


class WatchStatisticsUI{  
  
}

class WatchStatisticsController{
  +getFreelancers()
  }

class ApplicationPOT{
  +getInstance()
  +getActualSession()
  +getFacadeAuthorization()
  }

class Platform {
  +getST()
  +getrOrg()
  }

class UserSession {
  +getUserEmail()
  }

class RegisterOrganization{
  +getOrganizationByUserEmail(email)
  }

class Organization {
  -String nome
  -String email
  -String NIF
  +getRTrans()
  }

class RegisterTransaction{
  +getTransactions()
  }

class TransactionExecution{
  -Data endDate
  -double delay
  -String descriptionOfQuality
  }

class FacadeAuthorization {  
  +getUserSession()
}

class Payment {
  -double valueE
-double valueC
  }


WatchStatisticsUI ..> WatchStatisticsController

WatchStatisticsController ..> ApplicationPOT
WatchStatisticsController ..> Platform
WatchStatisticsController ..> UserSession
WatchStatisticsController ..> RegisterOrganization
WatchStatisticsController ..> Organization
WatchStatisticsController ..> RegisterTransaction
WatchStatisticsController ..> FacadeAuthorization

ApplicationPOT  ..> Platform
ApplicationPOT  ..> FacadeAuthorization

FacadeAuthorization "1"-- "1" UserSession: has


Platform "1" -- "1" RegisterOrganization : has

RegisterOrganization "1" -- "1..*" Organization : has

Organization "1" -- "1" RegisterTransaction : has

RegisterTransaction "1" -- "1..*" TransactionExecution : has

TransactionExecution "1" -- "1" Payment : originates





@enduml